[metadata]
name = aiohttp_lambda
version = 0.0.1

[options]
packages = find_namespace:
python_requires = >=3.8
install_requires =
    aiohttp>=3.8,<4


[tool:pytest]
addopts = -p no:warnings
testpaths = src/test
timeout = 10
filterwarnings =
    error
    ignore::DeprecationWarning:distutils

[coverage:run]
source = src
branch = True

[coverage:report]
precision = 2
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    raise NotImplemented
    if TYPE_CHECKING:
    @overload
show_missing = true
sort = Name

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,venv,.venv

[mypy]
show_error_codes = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
check_untyped_defs = True
no_implicit_reexport = False
warn_unused_configs = True
disallow_incomplete_defs = True
ignore_missing_imports = True